# Bookalyze

./: .gitignore  README.md
.github/workflows/: build_backend.yml  build_frontend.yml  deploy_backend_dev.yml  deploy_client_dev.yml  deploy_dev.yml  deploy_frontend_dev.yml  deploy_server_dev.yml  deployment.yml
client/: .dockerignore  .prettierrc.js  Dockerfile  README.md  middleware.js  next.config.js  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json
client/app/: globals.css  layout.tsx  page.tsx
client/app/(authenticated)/: auth-navbar.tsx  layout.tsx
client/app/(home)/: layout.tsx  page.tsx
client/app/auth/: SignOut.tsx
client/app/chat/: layout.tsx  (+1 more)
infra/configs/: container-apps.yaml
infra/main/: main.tf  variables.tf
server/: .gitignore  Dockerfile  app.py  config.py  main.py  pyproject.toml  requirements.txt  run.py
server/apis/: chat.py
server/app/: main.py  routers.py
server/app/chat/: chat_service.py  constants.py  prompts.py  router.py
server/app/content/: content_service.py  router.py
server/app/core/: config.py  pinecone_service.py  text_service.py
server/apps/: __init__.py  chat.py  config.py  upload.py
server/apps/handlers/: content_handler.py  question_handler.py
server/apps/services/: history_extractor.py  prompts.py  stream.py
server/handlers/: content_handler.py  question_handler.py
server/services/: async_pinecone_hybrid_search.py  chunk_extractor.py  cost.py  embeddings.py  file_loader.py  handler.py  openai.py  pinecone.py  pinecone_hybrid_search.py  text_processing.py  utils.py
(+106 files in other folders)
